fix: remove scroll on content behind datepicker dialog

--- a/src/app/components/date-picker/date-picker.scss
+++ b/src/app/components/date-picker/date-picker.scss
@@ -110,9 +110,7 @@
 
   background: #fff;
   border-radius: $border-radius-S;
-  box-shadow:
-    8px 8px 15px rgba(0, 0, 0, 0.15),
-    -8px -8px 15px rgba(0, 0, 0, 0.15);
+  box-shadow: $overlay-shadow;
 
   display: flex;
   flex-direction: column;
@@ -123,12 +121,11 @@
   position: fixed;
   z-index: 19;
   inset: 0;
-  // background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(2px) saturate(120%);
   padding: 1rem 1rem 7rem;
 
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: flex-end;
   flex-direction: column;
   gap: 1rem;
@@ -182,12 +179,13 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
+    min-height: calc(6 * 4.75rem);
   }
 
   .week {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.125rem;
 
     h3 {
       font-size: $font-size-text;
@@ -293,4 +291,10 @@
 
 .leave-animation {
   @include slide-out-animation();
+}
+
+@media screen and (min-width: 1300px) {
+  .calendar-monthly .weeks {
+    min-height: calc(6 * 5.125rem);
+  }
 }
