--- a/src/app/components/quick-create-new/create-new.scss
+++ b/src/app/components/quick-create-new/create-new.scss
@@ -19,7 +19,7 @@
   height: 98%;
   max-height:  calc(100% - 7rem);
   z-index: 15;
-  box-shadow: 0 -10px 14px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 -4px 14px rgba(0, 0, 0, 0.15);
 
   .choices {
     display: flex;
